--- a/temp-file.css
+++ b/temp-file.css
@@ -13,6 +13,35 @@ overflow-x: hidden;
   width:70%;
   text-align: center;
 }
+
+.catBurritoSecretDoor{
+  color:inherit;
+  text-decoration: none;
+  /*cursor: auto;*/
+  border: 0 none;
+  border-color: transparent;
+}
+
+
+a:link { text-decoration: none; }
+a:visited { text-decoration: none; }
+a:hover { text-decoration: none; }
+a:hover { color: inherit; }
+a:active { text-decoration: none; }
+
+/*a.nostyle:link {
+    text-decoration: inherit;
+    color: inherit;
+    cursor: auto;
+}
+
+a.nostyle:visited {
+    text-decoration: inherit;
+    color: inherit;
+    cursor: auto;
+}*/
+
+
 /*Beuty Cures*/
 #spaMask{
   width:70%;
