--- a/webmd.css
+++ b/webmd.css
@@ -393,13 +393,13 @@ position:relative;
 .personaDes{
   font-size: 24px;
   text-align: center;
-    margin-bottom: 3%;
+  margin-bottom: 3%;
 }
 
 .statementPersonas{
   margin-top: 3%;
   text-align: center;
-  margin-bottom: 2%;
+  margin-bottom: 1%;
   font-size: 40px;
 }
 
@@ -582,6 +582,7 @@ table{
 .busGoalsBulletTextDiv{
   text-align: left;
   display:inline-block;
+  /*width:500px;*/
 }
 
 .busGoalBulletImgDiv{
@@ -709,68 +710,27 @@ STORYBOARD*/
 
 
 
-/*DESIGN:
-FEATURES*/
-/*.featureTitleMargins{
-  margin-top: 0;
-  margin-bottom: 2%;
-  font-size: 30px;
-  text-align: center;
-}*/
-
-/*DESIGN: VIDEO*/
-
-
-.videoDiv{
-text-align: center;
-}
-
-.iframe{
-  display:inline-block;
-  text-align: center;
-  margin-bottom: 3%;
-}
-
-.videoText{
-  display:inline-block;
-  width:300px;
-  margin-left: 5%;
-  vertical-align: top;
-  text-align: left;
-}
-
-@media (max-width:1030px) {
-  .videoDiv{
-  text-align: center;
-  }
-  .videoText{
-    width:600px;
-    margin-left: 0%;
-  }
-}
-
-@media (max-width:617px) {
-  .videoText{
-    width:370px;
-    margin-left: 0%;
-  }
-}
-
 /*DESIGN:INITAL FEATURES*/
+.featureTitleMargins{
+  margin-top: 3%;
+  margin-bottom: 1%;
+  font-size: 40px;
+  text-align: center;
+}
 
 /*row for bootstrap*/
 .featuresList{
   text-align: center;
-  margin-top: 2%;
-  margin-bottom:2%;
+  margin-top: 1%;
+  margin-bottom:1%;
 }
 
 .realTimeAndNur2{
   display:inline-block;
   text-align: center;
-  width:402px;
+  width:550px;
   vertical-align: top;
-  margin: 2%;
+  margin: 1%;
 }
 
 .experienceTitleIcon{
@@ -794,11 +754,11 @@ text-align: center;
   margin-right: 2%;
 }
 
-.flagIcon{
-  width:15px;
-  margin-right: 13px;
+.featureIconWatch{
+  width: 15px;
 }
 
+/*DESIGN*/
 /*User Testing*/
 .testingCircleSec{
   text-align: center;
@@ -957,6 +917,7 @@ DESIGN DECISIONS*/
   height:50px;
   border-radius:50%;
   color:white;
+  background-color: rgb(55,147,195);
   position:relative;
   vertical-align: top;
   margin-right: 2%;
@@ -1081,7 +1042,7 @@ font-size: 30px;
 .recTop{
   width:300px;
   height:50px;
-  background-color:rgb(01, 161, 167);
+  background-color:rgb(169,204,96);
   vertical-align: middle;
   font-size: 24px;
   padding: 9px 0;
