--- a/webmd.css
+++ b/webmd.css
@@ -10,8 +10,14 @@
   }
 
   .projectTitle{
+    font-size: 50px;
+    text-align: left;
+  }
+
+  .projectTitle2{
     font-size: 30px;
     text-align: left;
+    margin-bottom:-5px;
   }
 
   .projectSubTitle{
@@ -20,6 +26,7 @@
     width: 500px;
     color:white;
   }
+
   .projectTitleBox{
     text-align:left;
     -moz-text-align: left;
@@ -27,11 +34,13 @@
 
   .logoAndTitleContainer{
     margin-left: 15%;
-    padding-top:11%;
+    padding-top:10%;
   }
 
 .webmdLogoAndTitle{
   display: inline-block;
+  vertical-align: middle;
+  margin-left: 5px;
 }
 
 /*OUR PROCESS*/
@@ -559,17 +568,15 @@ table{
   text-align: center;
 }
 
-.businessGoalsSubText{
-  text-align: left;
-}
-
 .businessGoalsSub{
   font-size: 30px;
   margin-bottom: 3%;
 }
 .businessGoalsSubText{
-  width: 90%;
+    text-align: left;
+  width: 85%;
   margin: 0 auto;
+  padding-bottom: 2%;
 }
 
 .businessGoalsBullets{
@@ -579,39 +586,59 @@ table{
   padding: 1%;
 }
 
+.businessGoalsBulletsLast{
+  padding-top: 0;
+}
+
+/*
 .busGoalsBulletTextDiv{
   text-align: left;
   display:inline-block;
   /*width:500px;*/
-}
+/*}*/
 
 .busGoalsBulletText{
   text-align: left;
   display:inline-block;
   /*width:500px;*/
-  width:80%;
+  width:90%;
+  padding-left: 1%;
 }
 
-.busGoalBulletImgDiv{
+/*.busGoalBulletImgDiv{
   /*position:relative;*/
-  vertical-align: top;
+  /*vertical-align: top;
   display:inline-block;
-}
+}*/
 
 .busGoalBulletImg{
-  width:40px;
-  /*display:inlin*/
+  width:30px;
+}
+
+.busGoalBulletImg1{
+  padding-bottom: 50px;
+}
+
+.busGoalBulletImg2{
+  padding-bottom: 30px;
+}
+
+.busGoalBullet3{
+  margin-top: -0.7%
 }
 
 .trees{
   /*text-align: center;*/
-  width:80%;
+  width:75%;
   margin: 0 auto;
+  padding-bottom:2%;
+  margin-top: -1%;
 }
 
 .treesNow, .treesPotential{
   display: inline-block;
-  margin:5%;
+  margin-left:4%;
+  margin-right:4%;
 }
 
 .treesNow{
@@ -623,9 +650,6 @@ table{
   text-align: center;
 }
 
-.treesTotal{
-
-}
 
 .trees365{
   width:400px;
@@ -684,7 +708,6 @@ TWO EXPERIENCES*/
 
 }
 
-
 .experienceTitle{
   font-size: 30px;
   text-align: left;
@@ -732,7 +755,6 @@ STORYBOARD*/
   width:100%;
   /*margin: 0 auto;*/
 }
-
 
 
 /*DESIGN:INITAL FEATURES*/
@@ -785,7 +807,7 @@ STORYBOARD*/
 
 /*DESIGN*/
 /*User Testing*/
-.testingCircleSec{
+/*.testingCircleSec{
   text-align: center;
 }
 
@@ -813,9 +835,9 @@ STORYBOARD*/
 
 .circle3{
   background-color: rgb(74, 74, 74);
-}
+}*/
 
-.prototypes{
+/*.prototypes{
   text-align: center;
 }
 
@@ -839,9 +861,82 @@ STORYBOARD*/
 }
 .protoTypesLow{
   margin-top:18px;
+}*/
+
+/*DESIGN:USER TESING*/
+
+
+
+
+
+
+DESIGN DECISIONS*/
+
+.tasksDiv{
+  text-align: center;
+  /*margin:5%;*/
+  width: 70%;
+  margin: 0 auto;
 }
 
+.tasks{
+  font-size: 30px;
+  text-align: center;
+  margin-bottom: 3%;
+}
+
+/*.tasksList{
+  text-align: left;
+  margin 0 auto;
+}*/
+
+.taskSections{
+text-align: center;
+}
+
+.taskCircle{
+  width:50px;
+  height:50px;
+  border-radius:50%;
+  color:white;
+  background-color: rgb(74,74, 74);
+  position:relative;
+  vertical-align: top;
+  margin-right: 2%;
+  display: inline-block;
+  font-size:26px;
+  padding-top:7px;
+  /*padding-left: 1%;*/
+}
+
+
+@media (max-width:711px) {
+  .taskText{
+    width:90%;
+  }
+}
+
+.taskPoints{
+font-size: 24px;
+font-weight: bold;
+}
+
+.taskText{
+  text-align: left;
+  width:650px;
+  display: inline-block;
+  margin:0 auto;
+}
+
+
 /*PAPER PROTOTYPES*/
+.lowFiPro{
+  font-size: 30px;
+  text-align: center;
+  margin-top: 3%;
+  margin-bottom: 2%;
+}
+
 .paperPrototypes{
   text-align: center;
 }
@@ -853,7 +948,9 @@ STORYBOARD*/
 
 .paperProtoImg{
   width:300px;
-  height:400px;
+  border: solid 4px;
+  border-color: rgb(55,147,195);
+  /*border-color: rgb(74, 74, 74);*/
 }
 
 .paperProtoText{
