--- a/webmd.css
+++ b/webmd.css
@@ -864,17 +864,17 @@ STORYBOARD*/
 }*/
 
 /*DESIGN:USER TESING*/
+.iphone6ImgDiv{
+  text-align: center;
+}
 
-
-
-
-
-
-DESIGN DECISIONS*/
+.iphone6Img{
+  width:40%;
+  /*margin:0 auto;*/
+}
 
 .tasksDiv{
   text-align: center;
-  /*margin:5%;*/
   width: 70%;
   margin: 0 auto;
 }
@@ -882,6 +882,7 @@ DESIGN DECISIONS*/
 .tasks{
   font-size: 30px;
   text-align: center;
+  margin-top: 3%;
   margin-bottom: 3%;
 }
 
@@ -929,7 +930,7 @@ font-weight: bold;
 }
 
 
-/*PAPER PROTOTYPES*/
+/*low fidelity digital PROTOTYPES*/
 .lowFiPro{
   font-size: 30px;
   text-align: center;
@@ -974,7 +975,7 @@ margin-right: 3%;
 
 .testingFeedback{
   width: 200px;
-  height: 120px;
+  height: 70px;
   padding:5%;
   color: white;
 }
@@ -988,30 +989,13 @@ margin-right: 3%;
   color:rgb(74,74,74);
   width:200px;
   vertical-align: top;
-}
-.feedbackParentGreen{
-  background-color: rgb(01, 161, 167);
-  color: white;
+  /*padding-top: 2%;*/
 }
 
-.feedbackParentOrange{
-  background-color: rgb(221,98,92);
-  color: white;
-}
+/*.feedbackPText{
+  padding-top: 5px;
+}*/
 
-.feedbackParentCharcol{
- background-color: rgb(74,74,74);
- color: white;
-}
-
-.feedbackParentLightGreen{
-  background-color: rgb(212,245,242);
-  color: rgb(74,74,74);
-}
-.feedbackParentLightOrange{
-  background-color: rgb(249,216,212);
-  color: rgb(74,74,74);
-}
 
 /*DESIGN:
 Usability testing findings*/
