--- a/home.css
+++ b/home.css
@@ -123,6 +123,10 @@ p{
   position:relative;
 }
 
+.flip-container {
+  margin:1%;
+}
+
 /*hide back of pane during swap*/
 .front, .back{
   backface-visibility: hidden;
