--- a/project.css
+++ b/project.css
@@ -251,6 +251,7 @@ padding:1%;
   font-size: 30px;
   padding-top: 3%;
   margin-bottom: 3%;
+  text-align: left;
 }
 
 /*UP TEXT SECTION AT BOTTOM OF PORTFOLIO*/
